--- a/careers.html
+++ b/careers.html
@@ -54,107 +54,108 @@
             </div>
         </div>
     </header>
-    <div class="box row " style="margin-top: 135px;">
-        <div class="leftcolumn col-md-6">
-            <img src="./Assets/images/casual-life-3d-19 1.png" alt="avatar">
-        </div>
-        <div class="rightcolumn col-md-6">
-            <h3 class="text-center title">Careers</h3>
-            <p class="text-center">Join our team.</p>
-            <form class="row">
-                <div class="col-md-6">
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Name</label>
-                        <input type="text" class="form-control message">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Birth Date</label>
-                        <input type="date" class="form-control message">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                        <input type="email" class="form-control message">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Job</label>
-                        <select class="form-control message">
-                            <option value="">Sales</option>
-                            <option value="">Backoffice</option>
-                            <option value="">Quality</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">CV</label>
-                        <input type="file" class="form-control message">
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Message</label>
-                        <textarea class="form-control" ></textarea>
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="mb-3">
-                        <div class="buttons">
-                            <button class="blob-btn">
-                                Send Message
-                                <span class="blob-btn__inner">
-                                    <span class="blob-btn__blobs">
-                                        <span class="blob-btn__blob"></span>
-                                        <span class="blob-btn__blob"></span>
-                                        <span class="blob-btn__blob"></span>
-                                        <span class="blob-btn__blob"></span>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="./Assets/images/casual-life-3d-19 1.png" alt="avatar" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+                <h3 class="text-center title">Careers</h3>
+                <p class="text-center">Join our team.</p>
+                <form>
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <label for="name" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="name">
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label for="birthdate" class="form-label">Birth Date</label>
+                            <input type="date" class="form-control" id="birthdate">
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label for="email" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="email">
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label for="job" class="form-label">Job</label>
+                            <select class="form-control" id="job">
+                                <option value="">Sales</option>
+                                <option value="">Backoffice</option>
+                                <option value="">Quality</option>
+                            </select>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label for="cv" class="form-label">CV</label>
+                            <input type="file" class="form-control" id="cv">
+                        </div>
+                        <div class="col-md-12 mb-3">
+                            <label for="message" class="form-label">Message</label>
+                            <textarea class="form-control" id="message"></textarea>
+                        </div>
+                        <div class="col-md-12 mb-3">
+                            <div class="buttons text-center">
+                                <button class="blob-btn btn btn-primary">
+                                    Send Message
+                                    <span class="blob-btn__inner">
+                                        <span class="blob-btn__blobs">
+                                            <span class="blob-btn__blob"></span>
+                                            <span class="blob-btn__blob"></span>
+                                            <span class="blob-btn__blob"></span>
+                                            <span class="blob-btn__blob"></span>
+                                        </span>
                                     </span>
-                                </span>
-                            </button>
-                            <br />
-                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" class="hide">
-                                <defs>
-                                    <filter id="goo">
-                                        <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10"></feGaussianBlur>
-                                        <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 21 -7"
-                                            result="goo"></feColorMatrix>
-                                        <feBlend in2="goo" in="SourceGraphic" result="mix"></feBlend>
-                                    </filter>
-                                </defs>
-                            </svg>
+                                </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                
-            </form>
+                </form>
+            </div>
         </div>
     </div>
-</div>
-<footer>
-    <div class="social-media">
-        <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook fa-xl"></i></a>
-        <a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram fa-xl"></i></a>
-        <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
-        <a href="https://www.twitter.com/"><i class="fa-brands fa-square-twitter fa-xl"></i></a>
-        <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube fa-xl"></i></a>
-    </div>
-    <div class="footer-nav">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html#export">Export</a></li>
-            <li><a href="media.html">Media</a></li>
-            <li><a href="careers.html">Careers</a></li>
-            <li><a href="contactUs.html">Contact Us</a></li>
-            <li><a href="#">العربية</a></li>
-        </ul>
-    </div>
-    <p>&copy; 2023 Goodies Egypt</p>
-</footer>
+    <!-- <footer>
+        <div class="social-media">
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook fa-xl"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram fa-xl"></i></a>
+            <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
+            <a href="https://www.twitter.com/"><i class="fa-brands fa-square-twitter fa-xl"></i></a>
+            <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube fa-xl"></i></a>
+        </div>
+        <div class="footer-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#export">Export</a></li>
+                <li><a href="media.html">Media</a></li>
+                <li><a href="careers.html">Careers</a></li>
+                <li><a href="contactUs.html">Contact Us</a></li>
+                <li><a href="#">العربية</a></li>
+            </ul>
+        </div>
+        <p>&copy; 2023 Goodies Egypt</p>
+    </footer> -->
+    <footer>
+        <div class="container">
+            <div class="social-media">
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook fa-xl"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram fa-xl"></i></a>
+                <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
+                <a href="https://www.twitter.com/"><i class="fa-brands fa-square-twitter fa-xl"></i></a>
+                <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube fa-xl"></i></a>
+            </div>
+            </div>
+            <div class="footer-nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#export">Export</a></li>
+                    <li><a href="media.html">Media</a></li>
+                    <li><a href="careers.html">Careers</a></li>
+                    <li><a href="contactUs.html">Contact Us</a></li>
+                    <li><a href="#">العربية</a></li>
+                </ul>
+            </div>
+            <p>&copy; 2023 Goodies Egypt</p>
+        </div>
+    </footer>
+
 
 <!-- ********************************** -->
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
