--- a/careers.html
+++ b/careers.html
@@ -11,13 +11,9 @@
     <!-- <link rel="stylesheet" href="./Assets/style/bootstrap.min.css"> -->
     <link rel="stylesheet" href="assets/style/sass.css">
     <link rel="stylesheet" href="assets/style/style.css">
-
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
     <link rel="icon" type="image/png" href="assets/images/logo.png" />
-
     <title>Goodies Egypt</title>
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -54,8 +50,8 @@
             </div>
         </div>
     </header>
-    <div class="container mt-5">
-        <div class="row">
+    <div class="container-fluid mt-5 " >
+        <div class="row" style="margin-top: 200px;--bs-gutter-x: 0; ">
             <div class="col-md-6">
                 <img src="./Assets/images/casual-life-3d-19 1.png" alt="avatar" class="img-fluid">
             </div>
@@ -132,29 +128,24 @@
         </div>
         <p>&copy; 2023 Goodies Egypt</p>
     </footer> -->
-    <footer>
-        <div class="container">
-            <div class="social-media">
-                <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook fa-xl"></i></a>
-                <a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram fa-xl"></i></a>
-                <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
-                <a href="https://www.twitter.com/"><i class="fa-brands fa-square-twitter fa-xl"></i></a>
-                <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube fa-xl"></i></a>
-            </div>
-            </div>
-            <div class="footer-nav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#export">Export</a></li>
-                    <li><a href="media.html">Media</a></li>
-                    <li><a href="careers.html">Careers</a></li>
-                    <li><a href="contactUs.html">Contact Us</a></li>
-                    <li><a href="#">العربية</a></li>
-                </ul>
-            </div>
-            <p>&copy; 2023 Goodies Egypt</p>
-        </div>
-    </footer>
+    <footer class="nav m-0">
+        <div class="social-media text-center">
+        <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook fa-xl"></i></a>
+        <a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram fa-xl"></i></a>
+        <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
+        <a href="https://www.twitter.com/"><i class="fa-brands fa-square-twitter fa-xl"></i></a>
+        <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube fa-xl"></i></a>
+    </div>
+            <ul class="nav">
+                <li class="nav-item m-2"><a href="index.html">Home</a></li>
+                <li class="nav-item m-2"><a href="index.html#export">Export</a></li>
+                <li class="nav-item m-2"><a href="media.html">Media</a></li>
+                <li class="nav-item m-2"><a href="careers.html">Careers</a></li>
+                <li class="nav-item m-2"><a href="contactUs.html">Contact Us</a></li>
+                <li class="nav-item m-2"><a href="#">العربية</a></li>
+            </ul>
+    <div class="row text-center"><p>&copy; 2023 Goodies Egypt</p></div>
+</footer>
 
 
 <!-- ********************************** -->
