--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <div class="buttons mt-4">
                 <button class="blob-btn btn btn-primary">
-                    <span  data-lan="tastenow">Taste now</span>
+                    <div data-lan="tastenow">Taste now</div>
                     
                     <span class="blob-btn__inner">
                         <span class="blob-btn__blobs">
