--- a/media.html
+++ b/media.html
@@ -28,74 +28,51 @@
 
 <body>
     <header>
-        <div class="container">
-            <div class="row">
-                <nav class="navbar navbar-expand-lg">
-                    <div class="container">
-                        <a class="navbar-brand fs-4" href="index.html">
-                            <img class="logo-img" src="assets/images/LogoWithDescription.png" alt="Goodies Logo" />
-                        </a>
-                        <!-- Toggle Button -->
-                        <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas"
-                            data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                            <span class="menu-button bx bx-menu"></span>
-                        </button>
-                        <!-- SideBar -->
-                        <div class="sidebar offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
-                            aria-labelledby="offcanvasNavbarLabel">
-                            <div class="offcanvas-header border-bottom">
-                                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                                    Goodies Egypt
-                                </h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
-                                    aria-label="Close"></button>
-                            </div>
-                            <div class="offcanvas-body">
-                                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 fs-5">
-                                    <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="index.html"
-                                            data-lan="home">Home</a>
-                                    </li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" role="button"
-                                            data-bs-toggle="dropdown" aria-expanded="false" data-lan="aboutus">
-                                            AboutUS
-                                        </a>
-                                        <ul class="dropdown-menu">
-                                            <li>
-                                                <a class="dropdown-item" href="#story" data-lan="ourstory">Our story</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="#mission" data-lan="mission">Mission</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="#vision" data-lan="vision">Vision</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item mx-2">
-                                        <a class="nav-link" href="#export" data-lan="export">Export</a>
-                                    </li>
-                                    <li class="nav-item mx-2">
-                                        <a class="nav-link" href="media.html" data-lan="media">Media</a>
-                                    </li>
-                                    <li class="nav-item mx-2">
-                                        <a class="nav-link" href="careers.html" data-lan="careers">Careers</a>
-                                    </li>
-                                    <li class="nav-item mx-2">
-                                        <a class="nav-link" href="contactUs.html" data-lan="contactus">Contact Us</a>
-                                    </li>
-                                    <li>
-                                        <select id="lanselect">
-                                            <option value="en" data-lan="english" selected>
-                                                English
-                                            </option>
-                                            <option value="ar" data-lan="arabic">Arabic</option>
-                                        </select>
-                                    </li>
-                                </ul>
-                            </div>
+        <div class="container-fluid">
+            <div class="row" style="--bs-gutter-x:0;">
+                <nav class="navbar navbar-expand-xl ">
+                    <div class="container-fluid" style="width: 85%;">
+                      <a class="navbar-brand fs-4" href="index.html">
+                        <img class="logo-img" src="assets/images/LogoWithDescription.png" alt="Goodies Logo">
+                      </a>
+                      <!-- Toggle Button -->
+                      <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                        <span class="menu-button bx bx-menu"></span>
+                      </button>
+                      <!-- SideBar -->
+                      <div class="sidebar offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                        <div class="offcanvas-header border-bottom">
+                          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Goodies Egypt</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                         </div>
+                        <div class="offcanvas-body">
+                          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 fs-5">
+                            <li class="nav-item mx-4">
+                              <a class="nav-link active" aria-current="page" href="index.html" data-lan="home">Home</a>
+                            </li>
+                            <li class="nav-item dropdown mx-4">
+                              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" data-lan="aboutus">
+                                AboutUS
+                              </a>
+                              <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="index.html#story" data-lan="ourstory">Our story</a></li>
+                                <li><a class="dropdown-item" href="index.html#mission" data-lan="mission">Mission</a></li>
+                                <li><a class="dropdown-item" href="index.html#vision" data-lan="vision">Vision</a></li>
+                              </ul>
+                            </li>
+                            <li class="nav-item mx-4"><a class="nav-link" href="index.html#export" data-lan="export">Export</a></li>
+                            <li class="nav-item mx-4"><a class="nav-link" href="media.html" data-lan="media">Media</a></li>
+                            <li class="nav-item mx-4"><a class="nav-link" href="careers.html" data-lan="careers">Careers</a></li>
+                            <li class="nav-item mx-4"><a class="nav-link" href="contactUs.html" data-lan="contactus">Contact Us</a></li>
+                            <li class="nav-item mx-4">
+                                <select id="lanselect">
+                                    <option value="en" data-lan="english" selected>English</option>
+                                    <option value="ar" data-lan="arabic">Arabic</option>
+                                </select>
+                            </li>   
+                          </ul>
+                        </div>
+                      </div>
                     </div>
                 </nav>
             </div>
